--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -135,3 +135,39 @@
 .single_group:first-child .remove_row {
    display: none;
 }
+
+
+
+/* Filteration of profile photo */
+/* 
+.selector{
+  background: grey;
+  text-align: center;
+}
+#background{
+  height: 500px;
+  margin-top: 10px;
+    background-image: url("https://images.unsplash.com/photo-1455476915919-2b028d0a1230");
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+}
+p{
+  font-family: arial;
+  color: #ffffff;
+  text-align: center;
+  display: inline-block;
+  font-weight: bold;
+  margin-right: 10%;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+#color1:hover{
+  color: #000000;
+}
+#color2:hover{
+  color: #cd811f;
+}
+#normal:hover{
+  color: #4b591b;
+} */
