--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,94 +1,3 @@
-/*common css start*/
-/*font-family: 'Ruthie', cursive;
-font-family: 'Sacramento', cursive;
-font-family: 'Russo One', sans-serif;*/
-@import url('https://fonts.googleapis.com/css?family=Russo+One|Ruthie|Sacramento&display=swap');
-body{font-family: 'Sacramento', cursive;}
-body h1, body h2{font-family: 'Ruthie', cursive;}
-h1,h2,h3,h4,h5,h6,p{margin: 0}
-ul{padding: 0; margin: 0;}
-a{display: inline-block; text-decoration: none!important; outline: none!important;}
-/*common css end*/
-/*loader css start*/
-#loader-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: 0;
-  background-color: #8D6E63;
-  z-index: 11;
-}
-.loader {
-  height: 20px;
-  width: 250px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-}
-.loader--dot {
-  animation-name: loader;
-  animation-timing-function: ease-in-out;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  height: 20px;
-  width: 20px;
-  border-radius: 100%;
-  background-color: black;
-  position: absolute;
-  border: 2px solid white;
-}
-.loader--dot:first-child {
-  background-color: #8cc759;
-  animation-delay: 0.5s;
-}
-.loader--dot:nth-child(2) {
-  background-color: #8c6daf;
-  animation-delay: 0.4s;
-}
-.loader--dot:nth-child(3) {
-  background-color: #ef5d74;
-  animation-delay: 0.3s;
-}
-.loader--dot:nth-child(4) {
-  background-color: #f9a74b;
-  animation-delay: 0.2s;
-}
-.loader--dot:nth-child(5) {
-  background-color: #60beeb;
-  animation-delay: 0.1s;
-}
-.loader--dot:nth-child(6) {
-  background-color: #fbef5a;
-  animation-delay: 0s;
-}
-.loader--text {
-  position: absolute;
-  top: 200%;
-  left: 0;
-  right: 0;
-  width: 4rem;
-  margin: auto;
-}
-@keyframes loader {
-  15% {
-    transform: translateX(0);
-  }
-  45% {
-    transform: translateX(230px);
-  }
-  65% {
-    transform: translateX(230px);
-  }
-  95% {
-    transform: translateX(0);
-  }
-}
-/*loader css end*/
 /*home page css start*/
 .home_slider_section {
   height: 100vh;
@@ -295,7 +204,7 @@ ul.slick-dots.white .slick-active button{
 .form_input{
   margin-bottom: 10px;
 }
-.form-control {
+.form_input .form-control {
   height: 69px;
   background-color: transparent !important;
   border-radius: 0px;
@@ -306,7 +215,8 @@ ul.slick-dots.white .slick-active button{
   color: #ffffff !important;
   font-size: 41.67px;
   padding: 8px 32px;
-}
+  font-family: 'Sacramento', cursive!important;
+ }
 .form_input ::placeholder {
   color: white;
   position: relative;
