implement of authguard & social share button

--- a/src/app/my-cart/my-cart.component.html
+++ b/src/app/my-cart/my-cart.component.html
@@ -17,7 +17,7 @@
             <tr *ngFor="let products of cartDetails" class="product" ng-init="count = 0">
                 <td>{{products.activityName}}</td>
                 <td>{{products.groupName}}</td>
-                <td>{{products.gender}}</td>
+                <td>{{products.itemGender}}</td>
                 <td>{{products.itemName}}</td>
                 <td class="product-price">{{products.itemPrice}}</td>
                 <td class="product-quantity">
