--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+@import '../node_modules/@ngx-share/button/themes/default/default-theme.css';
+
+
 /*common css start*/
 /*font-family: 'Ruthie', cursive;
 font-family: 'Sacramento', cursive;
